--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "around-the-world-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tusindfryd.github.io/around-the-world",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
+    "react-div-100vh": "^0.5.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-evil-icons": "^0.5.0",
+    "react-scripts": "3.4.3",
+    "react-spotify-api": "^3.0.0",
+    "react-spotify-auth": "^1.1.1",
+    "react-spotify-widgets": "^0.1.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
