--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-spotify-api": "^3.0.0",
     "react-spotify-auth": "^1.1.1",
     "react-spotify-widgets": "^0.1.7",
+    "react-tooltip": "^4.2.10",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0"
   },
