--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "around-the-world-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tusindfryd.github.io/around-the-world",
+  "homepage": "https://nonnullish.github.io/around-the-world",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -22,10 +22,10 @@
     "semantic-ui-react": "^1.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
