--- a/package.json
+++ b/package.json
@@ -1,50 +1,40 @@
 {
-  "name": "around-the-world-react",
-  "version": "0.1.0",
+  "name": "around-the-world",
   "private": true,
-  "homepage": "https://nonnullish.github.io/around-the-world",
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
-    "react": "^16.13.1",
-    "react-div-100vh": "^0.5.5",
-    "react-dom": "^16.13.1",
-    "react-evil-icons": "^0.5.0",
-    "react-scripts": "3.4.3",
-    "react-spotify-api": "^3.0.0",
-    "react-spotify-auth": "^1.1.1",
-    "react-spotify-widgets": "^0.1.7",
-    "react-tooltip": "^4.2.10",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.3.0"
-  },
+  "version": "0.0.2",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@react-three/drei": "^9.114.6",
+    "@react-three/fiber": "^8.17.10",
+    "@types/three": "^0.169.0",
+    "jquery": "^3.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "sonner": "^1.4.41",
+    "three": "^0.169.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@types/jquery": "^3.5.31",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0"
   }
 }
